--- a/arability/app/views/projects/show.html.erb
+++ b/arability/app/views/projects/show.html.erb
@@ -1,8 +1,6 @@
 <div class="container" border="1"> 
 	<h3><%= t(:project)%>: <%=@project.name %></h3><br>
 	<%= link_to 'Import CSV file', import_csv_project_path %>
-	<br>
-	<%= link_to 'Export Project Data to CSV file', action: "export_to_csv", controller: "projects", :project_id => @project.id %>
 	<%= button_to "Add words", action: "search", controller: "search", :project_id => @project.id %>
 	<form>
 		<div class="container well">
@@ -16,7 +14,7 @@
 				<div class="btn-group">
 					<button class="btn dropdown-toggle" data-toggle="dropdown"><i class="icon-briefcase"></i> <%= t(:export) %> <span class="caret"></span></button>
 					<ul class="dropdown-menu">
-						<li><a href= "#">csv</a></li>
+						<%= link_to t(:file)+'.csv', action: "export_to_csv", controller: "projects", :project_id => @project.id %>
 					</ul>
 				</div>
 				<div class="btn-group">
