--- a/arability/app/views/authentications/remove_twitter_connection.html.erb
+++ b/arability/app/views/authentications/remove_twitter_connection.html.erb
@@ -1,4 +1,19 @@
-<h2 align="right">الخطوة الثالثة: تواصل مع تويتر الخاص بك</h2>
+<% if I18n.locale==:en %>
+
+<h2>Connect to your Twitter account</h2>
+<br>
+<div>
+    <div>
+        <img alt="Twitter" class="border-none" src="/assets/twitter.png" width="100" />
+        <%= link_to "Connect", "/auth/twitter" %>
+    </div>
+    <br>
+    <%= link_to "Finish", root_path %>
+</div>
+
+<% else I18n.locale==:ar %>
+
+<h2 align="right">تواصل مع تويتر الخاص بك</h2>
 <br>
 <div align="right">
     <div>
@@ -8,3 +23,5 @@
     <br>
     <%= link_to "إنتهاء", root_path %>
 </div>
+
+<% end %>
