--- a/arability/app/views/authentications/twitter_callback.html.erb
+++ b/arability/app/views/authentications/twitter_callback.html.erb
@@ -1,15 +1,27 @@
-<h2 align="right">الخطوة الثالثة: تواصل مع تويتر الخاص بك</h2>
+<% if I18n.locale==:en %>
+
+<h2>Connect to your Twitter account</h2>
+<br>
+<div>
+    <div>
+        <img alt="Twitter" class="border-none" src="/assets/twitter.png" width="100" />
+        <%= link_to "Remove Connection", "/authentications/remove_twitter_connection" %>
+    </div>
+    <br>
+    <%= link_to "Finish", root_path %>8
+</div>
+
+<% else I18n.locale==:ar %>
+
+<h2 align="right">تواصل مع تويتر الخاص بك</h2>
 <br>
 <div align="right">
     <div>
-        <img alt="Twitter" class="border-none" src="/assets/twitter.png" width="100" />
         <%= link_to "إلغاء الاتصال", "/authentications/remove_twitter_connection" %>
-        <!--<button class="btn btn-link" type="button" action="remove_twitter_connection">Twitter إلغاء الاتصال مع</button>
-        <%= current_gamer%>
-        <%= gamer_signed_in? %>-->
-       <% gamer = Authentication.find_by_gamer_id(current_gamer) %>
-       <%= gamer.gid %>
+        <img alt="Twitter" class="border-none" src="/assets/twitter.png" width="100" />
     </div>
     <br>
     <%= link_to "إنتهاء", root_path %>
 </div>
+
+<% end %>
