--- a/arability/app/views/admin/index.html.erb
+++ b/arability/app/views/admin/index.html.erb
@@ -14,6 +14,11 @@
 					<li>
 						<a href="#admin-import-csv-file" data-toggle="tab">استيراد ملف كلمات بصيغة CSV </a>
 					</li>
+					<li class="divider"></li>
+					<li class="nav-header">إدارة الجوائز</li>
+					<li>
+						<a href="#admin-add-prize" data-toggle="tab">إضافة جائزة جديدة</a>
+					</li>
 				</ul>
 			</div>
 		</div>
@@ -27,6 +32,9 @@
 				</div>
 				<div class="tab-pane well span7" id="admin-import-csv-file">
 					<%= render 'admin-import-csv-file' %>
+				</div>
+				<div class="tab-pane well span7" id="admin-add-prize">
+					<%= render 'admin-add-prize' %>
 				</div>
 			</div>
 		</div>
