--- a/arability/app/views/search/search.html.erb
+++ b/arability/app/views/search/search.html.erb
@@ -1,6 +1,7 @@
 <div class="row">
 	<div class="span12">
 		<%= form_tag(search_path, :method => "post", :class => "form-search") do %>
+		<input type="hidden" value="<%= @project_id %>" name="project_id">
 			<%= content_tag(:div, :class => 'input-append') do %>
 				<% text_field_tag(:search, @search_keyword,
 													:placeholder => t(:search_here),
@@ -9,6 +10,7 @@
 					<% content_tag(:i, nil,:class => "icon-search") %>
 				<% end %>
 			<% end %>
+			
 			<div class="row" style="padding:10px;">
 				<div class="span12">
 						<button type="button" class="btn btn-mini" data-toggle="collapse" data-target="#filter">
@@ -96,7 +98,7 @@
 									<span><%= t(:view_stats)%></span>
 								</button>
 								<%= button_tag(:type => "submit", :class => 'btn btn-mini',:style => "display:inline;") do %>
-									<%= content_tag(:span, t(:add_to_project))%>
+									<%= link_to t(:add_to_project), projects_add_word_path(:project_id => @project_id, :synonym_id => synonym.id, :keyword => @search_keyword), {:style=>'color:#000000', :class => "css_class"}  %>
 								<% end %>
 							</div>
 						</div>
