[issue #181][WIP] corrected typing mistake in view

--- a/arability/app/views/authentications/twitter_callback.html.erb
+++ b/arability/app/views/authentications/twitter_callback.html.erb
@@ -8,7 +8,7 @@
         <%= link_to "Remove Connection", "/authentications/remove_twitter_connection" %>
     </div>
     <br>
-    <%= link_to "Finish", root_path %>8
+    <%= link_to "Finish", root_path %>
 </div>
 
 <% else I18n.locale==:ar %>
