--- a/arability/app/views/search/search.html.erb
+++ b/arability/app/views/search/search.html.erb
@@ -92,13 +92,24 @@
 								</i></span>
 							</div>
 							<div class="pull-right">
-								<button class="btn btn-mini" style="display:inline;" data-toggle="collapse" href="#collapse<%= synonym.id %>">
-									<span><%= t(:view_stats)%></span>
+								<button id="bstats<%=synonym.id%>" class="btn btn-mini" style="display:inline;" data-toggle="collapse" href="#collapse<%= synonym.id %>" onClick="reduce_div_height()">
+									    <span><%=t(:view_stats)%></span>
+     									<span style="display:none"><%=t(:hide_stats)%></span>
+		     							<script type="text/javascript">
+												function reduce_div_height(){
+													$('.highcharts-container').css('height', '250px');
+												}
+		                  </script>
 								</button>
 								<%= button_tag(:type => "submit", :class => 'btn btn-mini',:style => "display:inline;") do %>
 									<%= content_tag(:span, t(:add_to_project))%>
 								<% end %>
 							</div>
+							<script type="text/javascript">
+								$('#bstats<%=synonym.id%>').click(function() {
+								    $('span',this).toggle();
+								});
+							</script>
 						</div>
 					</div>
 				</div>
@@ -145,16 +156,3 @@
 		</div>
 	<% end %>
 <% end %>
-<script type="text/javascript">
-var renderer = new Highcharts.renderer(
-$('#test')[0],
-400,
-100
-);
-renderer.rect(10,10,100,50,5).translate(100,100).attr({
-fill: 'blue',
-stroke: 'black',
-'stroke-width':1
-}).add();
-
-</script>
