[WIP] fixed conflicts game_theme

--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -3,7 +3,8 @@
   var words=["car","sar","sad","sfd"];
 
   function clear() {
-
+    $("#zone").empty();
+  }
   function get_words(){
     return words;
   }
