--- a/arability/app/views/admin/_admin-add-trophy.html.erb
+++ b/arability/app/views/admin/_admin-add-trophy.html.erb
@@ -44,12 +44,12 @@
 			<div class="controls">
 				<div class="uploader-controls">
 					<div class="uploader-preview fileupload-preview thumbnail">
-						<img src="http://www.placehold.it/200x150/EFEFEF/AAAAAA&text=no+image">
+						<img src="/assets/noimage.gif" id="trophypre">
 					</div>
 					<div class="uploader-side">
 						<button class="btn uploader-button" type="button">إختيار الصورة</button>
 						<div class="uploader-file-input">
-							<input type="file" accept="image/*" name="image">
+							<input type="file" accept="image/*" name="image" onchange="readURL(this, '#trophypre');">
 						</div>
 						<p class="uploader-help" dir="ltr">Maximum size of 1MB. PNG, JPEG, GIF.</p>
 					</div>
