--- a/arability/app/views/admin/_admin-list-prizes.html.erb
+++ b/arability/app/views/admin/_admin-list-prizes.html.erb
@@ -1,10 +1,10 @@
-  <div id="myModalTrophy" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div id="myModalPrize" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
     <h3 id="myModalLabel">تأكيد المسح</h3>
   </div>
   <div class="modal-body">
-    <p>هل أنت متأكد من مسح المدالية؟؟</p>
+    <p>هل أنت متأكد من مسح الجائزة؟؟</p>
     <div class="prize-view"></div>
   </div>
   <div class="modal-footer">
@@ -14,10 +14,10 @@
 </div>
 <legend>
   <a>
-    عرض المداليات
+    عرض الجوائز
   </a>
 </legend>
-<% @trophies_list.each do |t| %>
+<% @prizes_list.each do |t| %>
 	<div class="trophy well">
 		<span>الاسم: <%= t.name %></span>
 		<div class="uploader-controls">
@@ -27,6 +27,6 @@
 		</div>
 		<span>المستوى: <%= t.level %></span>
 		<span>مجموع النقاط: <%= t.score %></span>
-		<span><a href="#myModalTrophy" data-href="/admin/deletetrophy?id=<%= t.id %>" role="button" class="edit-link-trophy" data-toggle="modal">delete</a></span>
+		<span><a href="#myModalPrize" data-href="/admin/deleteprize?id=<%= t.id %>" role="button" class="edit-link-prize" data-toggle="modal">delete</a></span>
 	</div>
 <% end %>
