--- a/arability/app/assets/stylesheets/admin.css.scss
+++ b/arability/app/assets/stylesheets/admin.css.scss
@@ -1,7 +1,3 @@
-// Place all the styles related to the admin controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-
 .offset25top {
 	margin-top: 5%;
 }
@@ -88,4 +84,18 @@ div.trophy span {
 
 div.trophy span:first-child {
   height: 40px;
+}
+
+div#myModalTrophy div.prize-view {
+  text-align: center;
+}
+
+div#myModalPrize div.prize-view {
+  text-align: center;
+}
+
+.fileupload-new .input-append .btn-file {
+  -webkit-border-radius: 0 0 0 0;
+  -moz-border-radius: 0 0 0 0;
+  border-radius: 0 0 0 0;
 }
