--- a/arability/app/views/games/vote.js.erb
+++ b/arability/app/views/games/vote.js.erb
@@ -67,7 +67,7 @@ vote_form.push('<div style="position:relative; left: 10px;" >');
 vote_form.push('<% submitted_word=params[:word] %>');
 vote_form.push('<% keyword=Keyword.where(:name => submitted_word).first%>');
 vote_form.push('<%synonym_list=keyword.synonyms.limit(4) %>');
-vote_form.push('<p id="text" style="color:white;" > من فضلك اختار معني لكلمة "<%= keyword.name %>"!</p>');
+vote_form.push('<p id="text" style="color:white;" > من فضلك اختر معني لكلمة "<%= keyword.name %>"!</p>');
 vote_form.push('<br/>');
 vote_form.push('<div class="btn-toolbar" id="synonym_buttons">');
 vote_form.push('<% i=1 %>');
