--- a/arability/app/views/games/gettrophies.js.erb
+++ b/arability/app/views/games/gettrophies.js.erb
@@ -18,7 +18,7 @@
         trophies = [];
 
         <% won_trophies.each do |t| %>
-          trophies.push('<div class="award">' + '<%= t.name %>' + '</div>');
+          trophies.push('<div class="award">' + '<img width="60" src="<%= t.image %>">' + '<%= t.name %>' + '</div>');
         <% end %>
          
     <% end %>
