--- a/arability/app/views/games/showtrophies.js.erb
+++ b/arability/app/views/games/showtrophies.js.erb
@@ -17,7 +17,7 @@
       $("#award-list").append($(trophy_error));
   <% else %>
     <% won_trophies.each do |wt| %>
-    trophy = '<div class="award-desc-unlocked">' + '<img width="60" src="<%= wt.image %>"' + '<%= wt.name %></div>';
+      trophy = '<div class="award-desc-unlocked">' + '<img width="60" src="/assets/rails.png">' + '<%= wt.name %></div>';
       $("#award-list").append($(trophy));
     <% end %>
   <% end %>
@@ -31,8 +31,8 @@
       $("#award-list").append($(trophy_error));
   <% else %>
       <% not_won_trophies.each do |nwt| %>
-      trophy = '<div class="award-desc-locked">' + '<img src="<%= nwt.image %>" width="60"' + '<%= nwt.name %></div>';
-          $("#award-list").append($(trophy));
+        trophy = '<div class="award-desc-locked">' + '<img width="60" src="/assets/rails.png">' + '<%= nwt.name %></div>';
+        $("#award-list").append($(trophy));
       <% end %>
     <% end %>
 <% end %>
