--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -17,6 +17,15 @@
     $.post("/games/vote.js", { word: first_word});
   }
 
+  function  setLevelTitle(){
+    <% if I18n.locale==:ar %>
+    levelTitle = "<span style='color: #155B84;'>مرحلة رقم " + level +"</span>";
+    <% else I18n.locale==:en %>
+     levelTitle = "<span style='color: #155B84;'>Level " + level +"</span>";
+    <% end %>
+    return levelTitle; 
+  }
+
 
 </script>
 
