--- a/arability/app/assets/stylesheets/games.css.scss
+++ b/arability/app/assets/stylesheets/games.css.scss
@@ -216,12 +216,18 @@ float:right;
   direction: rtl;
   text-align:right;
   background-color: rgba(200,200,200, 0.3);
+  color: white;
+}
+
+.award img {
+  magrin-left: 14px;
 }
 
 .award-title {
  padding: 20px;
  direction:rtl;
  text-align:right;
+ color: white;
 }
 
 .award {
@@ -236,7 +242,8 @@ float:right;
 }
 
 .award-desc-unlocked {
-   font-size: 20px;
+  color:white;
+  font-size: 20px;
   padding: 10px;
   margin-left:10px;
   margin-right:10px;
@@ -247,7 +254,8 @@ float:right;
 }
 
 .award-desc-locked {
-   font-size: 20px;
+  color:white;
+  font-size: 30px;
   padding: 10px;
   margin-left:10px;
   margin-right:10px;
@@ -257,6 +265,13 @@ float:right;
   background-color: rgba(200,204,190, 0.3);
 }
 
+.award-desc-unlocked img {
+  margin-left: 14px;
+}
+
+.award-desc-locked img {
+  margin-left: 14px;
+}
 
 
 .award-type {
@@ -273,17 +288,17 @@ float:right;
 .award-zone {
   overflow-y: scroll;
   height:100%;
- text-align:right; 
+  text-align:right;
 }
 
 .award {
-  font-size: 20px; 
+  font-size: 20px;
   padding: 10px;
-  margin-left:10px; 
-  margin-right:10px; 
-  margin-top: 10px; 
-  direction: rtl; 
-  text-align:right; 
+  margin-left:10px;
+  margin-right:10px;
+  margin-top: 10px;
+  direction: rtl;
+  text-align:right;
   background-color: rgba(200,200,200, 0.3); 
 }
 .award-desc-unlocked {
@@ -435,4 +450,5 @@ float:right;
 #score{
   color: white;
 }
+
 
