--- a/arability/app/views/games/getprizes.js.erb
+++ b/arability/app/views/games/getprizes.js.erb
@@ -9,7 +9,7 @@
               '<strong>تحذير!</strong> حاولت طلب بيانات غير صالحة.' + '</div>';
       $("#zone").append($(error));
   <% else %>
-    <% won_prizes = Prize.get_new_prizes_for_gamer(current_gamer.id, params[:level], params[:score]) %>
+    <% won_prizes = Prize.get_new_prizes_for_gamer(current_gamer.id, params[:score].to_i, params[:level].to_i) %>
 
     <% if won_prizes.length == 0 %>
         success = '<h1 class="award-title">لقد ربحت كل الجوائز لهذه المرحلة </h1>';
@@ -19,7 +19,7 @@
         prizes = [];
 
         <% won_prizes.each do |p| %>
-          prizes.push('<div class="award">' + '<%= p.name %>' + '</div>');
+          prizes.push('<div class="award">' + '<img src="<%= p.image %>">' +'<%= p.name %>' + '</div>');
         <% end %>
 
     <% end %>
