--- a/arability/app/views/layouts/application.html.erb
+++ b/arability/app/views/layouts/application.html.erb
@@ -14,6 +14,8 @@
     <%= stylesheet_link_tag "bootstrap_and_overrides", :media => "all" %>
     <%= javascript_include_tag "bootstrap" %>
   <% end %>
+  <%= stylesheet_link_tag "bootstrap-fileupload.min", :media => "all"%>
+  <%= javascript_include_tag "bootstrap-fileupload.min" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
