--- a/arability/app/views/projects/choose_keywords.html.erb
+++ b/arability/app/views/projects/choose_keywords.html.erb
@@ -1,5 +1,9 @@
 <div class="container">
-<h3>اختار من الكلمات التالية ليتم اضافتها إلى هذا المشروع </h3>
+<legend>
+  <a>
+    اختار من الكلمات التالية ليتم اضافتها إلى هذا المشروع
+  </a>
+</legend>
 <h6 style="color:red;">تبقى لك عدد <%= @words_remaining %> كلمة</h6>
 <%= form_tag add_from_csv_keywords_project_path, :method => :put, :id => 'form_to_select_words' do %>
   <table class="table table-bordered" id="words_synonyms_table">
