--- a/arability/app/views/developer/new.html.erb
+++ b/arability/app/views/developer/new.html.erb
@@ -1,9 +1,9 @@
-<h2>Register as developer Step1</h2>
+<h2><%= t(:register_as_developer) %></h2>
 <%= form_for(@developer, :url => { :action => "create" }) do |f| %>
 <%= f.label :first_name %>
 <%= f.text_field :first_name, :required => true %>
 <%= f.label :last_name %>
 <%= f.text_field :last_name, :required => true %>
-<div><%= f.submit "Next" %></div>
+<div><%= f.submit t(:next) %></div>
 <% end %>
 
