--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -1,6 +1,7 @@
 <script type="text/javascript" charset="utf-8">
   
   var words;
+  var win =false;
 
   function setWordsArray(){
     for(var x=0; x < successfulWords.length;x++){
@@ -9,22 +10,33 @@
     words=successfulWords;
   }
 
-  function clear(){
-
-  }
-
   function get_words(){
     return words;
   }
 
+  function check_empty_words(){
+    if(words.length == 0){
+    //$('.zone').append('<div style="position:center; background-color: yellow;">DONE VOTING</div>');
+      if(win == true){
+        $('.zone').append('<div><button class="btn btn-success" style="" type="submit"  onclick="nextLevel()">Go to next level</button></div>');
+      }
+      else{
+        $('.zone').append('<div><a class="btn btn-success" href="http://localhost:3000/game">Restart Game</a></div>');
+      }
+      return true;
+    }else{
+      return false;
+    }
+  } 
+
   function have_to_sign_in(){
-    alert(successfulWords);
+    //alert(successfulWords);
     $.post("/games/vote_errors.js");
   }
 
   function display_error_sign_in(locale){
     $('.zone').empty();
-    $('#workspace').remove();
+    //$('#workspace').remove();
     if(locale == "english"){
       $('.zone').append('<div class=\"vote_form\" style="font-size:20px; color:white; float:left; margin-left:30px;"><p>You have to be signed in to display vote form</p></div>');
     }
@@ -34,16 +46,18 @@
   }
 
   function request_vote_form(){
+    //alert("from vote form");
     $('.zone').empty();
-    if(words.length==0){
-      alert('empty');
+    //$('#workspace').remove();
+    $('.zone').append('<div class=\"vote_form\"></div></br>');
+    if(check_empty_words()){
+      //alert('empty');
       return;
     }
-    $('#workspace').remove();
-    $('.zone').append('<div class=\"vote_form\"></div></br>');    
     var first_word = words.shift();
     $.post("/games/vote.js", { word: first_word});
   }
+
     function clear() {
     $("#zone").empty();
   }
@@ -117,7 +131,7 @@
   </div>
 </div>
 
-<div id="workspace" style="position:relative; left: 10px; ">
+<!-- <div id="workspace" style="position:relative; left: 10px; ">
   <a onclick="have_to_sign_in()"  id="btn">start voting</a>
 </div>
-
+ -->
