--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -1,3 +1,6 @@
+<%=link_to "Invite people to facebook", post_facebook_path%>
+
+
 <script type="text/javascript" charset="utf-8">
   
   var words=["car","sar","sad","sfd"];
