--- a/arability/app/views/games/gettrophies.js.erb
+++ b/arability/app/views/games/gettrophies.js.erb
@@ -9,6 +9,13 @@
       $("#zone").append($(error));
   <% else %>
     <% won_trophies = Trophy.get_new_trophies_for_gamer(current_gamer.id, params[:score].to_i, params[:level].to_i) %>
+    <% if current_gamer.won_prizes?(params[:score].to_i, params[:level].to_i) %>
+        button = '<a class="btn btn-success pull-left" style="margin:20px; padding:10px; font-size:24px;">إلى الجوائز </a>';
+        $("#zone").append($(button));
+    <% else %>
+        button = '<a class="btn btn-success pull-left" style="margin:20px; padding:10px; font-size:24px;">إلى صفحة التصويت </a>';
+        $("#zone").append($(button));
+    <% end %>
 
     <% if won_trophies.length == 0 %>
         success = '<h1 class="award-title">لقد أكملت كل الانجازات لهذه المرحلة  </h1>';
@@ -20,7 +27,7 @@
         <% won_trophies.each do |t| %>
           trophies.push('<div class="award">' + '<img width="60" src="<%= t.image %>">' + '<%= t.name %>' + '</div>');
         <% end %>
-         
+
     <% end %>
         $("#zone").append($(success));
         for(var i = 0; i < trophies.length; i++) {
