--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -19,9 +19,9 @@
 
   function  setLevelTitle(){
     <% if I18n.locale==:ar %>
-    levelTitle = "<span style='color: #155B84;'>مرحلة رقم " + level +"</span>";
+    levelTitle = "<span onclick='nextLevel()' style='color: #155B84;'>مرحلة رقم " + level +"</span>";
     <% else I18n.locale==:en %>
-     levelTitle = "<span style='color: #155B84;'>Level " + level +"</span>";
+     levelTitle = "<span onclick='nextLevel()' style='color: #155B84;'>Level " + level +"</span>";
     <% end %>
     return levelTitle; 
   }
