[issue #170] [NW] improves switching beteen view but currently not working

--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -30,7 +30,7 @@
   } 
 
   function have_to_sign_in(){
-    //alert(successfulWords);
+    alert(successfulWords);
     $.post("/games/vote_errors.js");
   }
 
