[issue #181][WIP] finished implementation and integration with settings view

--- a/arability/app/views/authentications/twitter.html.erb
+++ b/arability/app/views/authentications/twitter.html.erb
@@ -11,7 +11,7 @@
         <%= link_to "Remove Connection", "/authentications/remove_twitter_connection" %>
     </div>
     <br>
-    <%= link_to "Finish", root_path %>
+    <%= link_to "Finish", "/gamers/edit" %>
 </div>
 
 <% else I18n.locale==:ar %>
@@ -25,7 +25,7 @@
         <img alt="Twitter" class="border-none" src="/assets/twitter.png" width="100" />
     </div>
     <br>
-    <%= link_to "إنتهاء", root_path %>
+    <%= link_to "إنتهاء", "/gamers/edit" %>
 </div>
 
 <% end %>
@@ -42,7 +42,7 @@
         <%= link_to "Connect", "/auth/twitter" %>
     </div>
     <br>
-    <%= link_to "Finish", root_path %>
+    <%= link_to "Finish", "/gamers/edit" %>
 </div>
 
 <% else I18n.locale==:ar %>
@@ -55,7 +55,7 @@
         <img alt="Twitter" class="border-none" src="/assets/twitter.png" width="100" />
     </div>
     <br>
-    <%= link_to "إنتهاء", root_path %>
+    <%= link_to "إنتهاء", "/gamers/edit" %>
 </div>
 
 <% end %>
