--- a/arability/app/views/devise/registrations/edit.html.erb
+++ b/arability/app/views/devise/registrations/edit.html.erb
@@ -44,6 +44,12 @@
   <div class="control-group"><%= f.label :current_password, :class => "control-label" %> 
   <%= f.password_field :current_password, :placeholder => "Current Password", :style => "margin-left: 10px;" %><i>&nbsp;(we need your current password to confirm your changes)</i></div>
 
+  <div class="Twitter">
+    <img alt="Twitter" class="border-none" src="/assets/twitter.png" width="50" />
+    <%= link_to ">> Connect to your Twitter account", "/authentications/twitter" %>
+  </div>
+  <br>
+
   <div><%= f.submit "Update", :class => "btn btn-success" %></div>
 
   <% else I18n.locale==:ar %>
@@ -111,6 +117,12 @@
 
   <div class="control-group"><%= f.label t(:current_password), :class => "control-label" %> 
   <%= f.password_field :current_password, :placeholder => "كلمة السر الحالية", :style => "margin-left: 10px;" %><i>&nbsp;</i></div>
+
+  <div class="Twitter">
+    <img alt="Twitter" class="border-none" src="/assets/twitter.png" width="50" />
+    <%= link_to ">> تواصل مع تويتر الخاص بك", "/authentications/twitter" %>
+  </div>
+  <br>
 
   <div><%= f.submit "جدد", :class => "btn btn-success" %></div>
 </div>
