--- a/arability/app/views/search/search_keywords.html.erb
+++ b/arability/app/views/search/search_keywords.html.erb
@@ -1,34 +1,35 @@
 <div class="row">
-	<%= form_tag(search_keywords_path, :method => "post", :class => "form-search") do %>
-  	<%= content_tag(:div, :class => 'input-append') do %>
-  		<% text_field_tag(:search, @search_keyword,
-  											:placeholder => t(:search_here),
-  											:class => 'search-query') + %>
-			<% button_tag(:type => "submit",:class => 'btn') do %>
-				<% content_tag(:i, nil,:class => "icon-search") %>
+	<div class="span12">
+		<%= form_tag(search_keywords_path, :method => "post", :class => "form-search") do %>
+	  	<%= content_tag(:div, :class => 'input-append') do %>
+	  		<% text_field_tag(:search, @search_keyword,
+	  											:placeholder => t(:search_here),
+	  											:class => 'search-query') + %>
+				<% button_tag(:type => "submit",:class => 'btn') do %>
+					<% content_tag(:i, nil,:class => "icon-search") %>
+				<% end %>
 			<% end %>
 		<% end %>
-	<% end %>
-</div>
 
-<div class="row">
-	<% if @similar_keywords.blank? && !@search_keyword.blank? %>
-	<div class="well well-small">
-		<span>
-			<%= form_tag(keywords_create_path, :method => "post", :class => "form-search", :style => "margin-bottom:0px;") do %>
-			<%= content_tag(:span, t(:keyword_not_found)) %>
-				<input name='keyword[name]' value='<%= @search_keyword %>' type="hidden">
-				<input name="redirect" value="<%= search_keywords_path %>" type="hidden">
-				<input class="btn btn-link" style="padding:0px;" value="<%= t(:add_word) %>" type="submit">
-			<% end %>
-		</span>
-	<% else %>
-		<% @similar_keywords.each do |c| %>
-			<div class="accordion-group" style="padding:10px;">
-				<div class="accordion-heading">
-					<%= link_to c.name, search_path(:search => c.name), :method => :post %>
-				</div>
+		<% if @similar_keywords.blank? && !@search_keyword.blank? %>
+			<div class="well well-small">
+				<span>
+					<%= form_tag(keywords_create_path, :method => "post", :class => "form-search", :style => "margin-bottom:0px;") do %>
+					<%= content_tag(:span, t(:keyword_not_found)) %>
+						<input name='keyword[name]' value='<%= @search_keyword %>' type="hidden">
+						<input name="redirect" value="<%= search_keywords_path %>" type="hidden">
+						<input class="btn btn-link" style="padding:0px;" value="<%= t(:add_word) %>" type="submit">
+					<% end %>
+				</span>
 			</div>
+		<% else %>
+			<% @similar_keywords.each do |c| %>
+				<div class="accordion-group" style="padding:10px;">
+					<div class="accordion-heading">
+						<%= link_to c.name, search_path(:search => c.name), :method => :post %>
+					</div>
+				</div>
+			<% end %>
 		<% end %>
-	<% end %>
+	</div>
 </div>
