--- a/arability/app/views/games/gettrophies.js.erb
+++ b/arability/app/views/games/gettrophies.js.erb
@@ -2,7 +2,7 @@
     error =  '<h1 class="award-title">سجل دخولك أو إشترك لكي تربح جوائز أو لتحقيق إنجازات</h1>';
     $("#zone").append($(error));
 <% else %>
-  <% if params[:level] == nil || params[:score] == nil%>
+  <% if params[:level] == nil || params[:score] == nil %>
       error = '<div class="alert" style="text-align:right; margin:10px;">' +
               '<button type="button" class="close" data-dismiss="alert">&times;</button>' +
               '<strong>تحذير!</strong> حاولت طلب بيانات غير صالحة.' + '</div>';
@@ -10,13 +10,15 @@
   <% else %>
     <% won_trophies = Trophy.get_new_trophies_for_gamer(current_gamer.id, params[:score].to_i, params[:level].to_i) %>
     <% if current_gamer.won_prizes?(params[:score].to_i, params[:level].to_i) %>
-        button = '<a class="btn btn-success pull-left" style="margin:20px; padding:10px; font-size:24px;">إلى الجوائز </a>';
+        button = '<a onclick="getPrizes(<%= params[:level] %>, <%= params[:score] %>)" class="btn btn-success pull-left" style="margin:20px; padding:10px; font-size:24px;">إلى الجوائز </a>';
         $("#zone").append($(button));
     <% else %>
-        button = '<a class="btn btn-success pull-left" style="margin:20px; padding:10px; font-size:24px;">إلى صفحة التصويت </a>';
+        button = '<a onclick="have_to_sign_in()" class="btn btn-success pull-left" style="margin:20px; padding:10px; font-size:24px;">إلى صفحة التصويت </a>';
         $("#zone").append($(button));
     <% end %>
 
+    score = '<h1 class="award-title">لقد سجلت النقاط التالية  <span id="score"><%= params[:score] %></span> </h1>';
+    $("#zone").append($(score));
     <% if won_trophies.length == 0 %>
         success = '<h1 class="award-title">لقد أكملت كل الانجازات لهذه المرحلة  </h1>';
     <% else %>
