--- a/arability/app/views/search/search.html.erb
+++ b/arability/app/views/search/search.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="span12">
-		<%= form_tag(search_path, :method => "post", :class => "form-search form-horizontal") do %>
+		<%= form_tag(search_path, :method => "post", :class => "form-search form-horizontal", :style => "margin-bottom:0px;") do %>
 			<%= content_tag(:div, :class => 'input-append') do %>
 				<% text_field_tag(:search, @search_keyword,
 													:placeholder => t(:search_here),
