--- a/arability/app/views/games/vote.js.erb
+++ b/arability/app/views/games/vote.js.erb
@@ -50,7 +50,7 @@ function update_errors(record_output){
 			$('.alert').append('<p style="font-size:20px; ">المعني لم يحفظ.</p>');
 		<% end %>
 	}
-	if( record_output == 4)
+	if( record_output == 4){
 		<% if I18n.locale == :en %>
 			$('.alert').append('<p style="font-size:20px; ">Thank you</p>');
 		<% else %>
@@ -66,7 +66,6 @@ function suggest_synonym_to_word(keyword_id){
 	$.post("/games/record_synonym.js" ,{synonym_name: translation, keyword_id: keyword_id});
 	//alert(translation+","+keyword_id);
 }
-
 
 vote_form=[];
 vote_form.push('<div style="position:relative; left: 10px;" >');
