--- a/arability/app/views/search/search.html.erb
+++ b/arability/app/views/search/search.html.erb
@@ -79,7 +79,7 @@
 				<div class="row">
 					<div class="span12">
 						<div class="accordion-toggle" style="padding-bottom:30px;">
-							<div class="pull-left">
+							<div id="synonyms<%=synonym.id%>" class="pull-left">
 								<span class="span2">
 									<%= synonym.name %>
 								</span>
@@ -91,7 +91,7 @@
 									<% end %>
 								</i></span>
 							</div>
-							<div class="pull-right">
+							<div id="buttons<%=synonym.id%>" class="pull-right">
 								<button class="btn btn-mini" style="display:inline;" data-toggle="collapse" href="#collapse<%= synonym.id %>">
 									<span><%= t(:view_stats)%></span>
 								</button>
@@ -99,6 +99,15 @@
 									<%= content_tag(:span, t(:add_to_project))%>
 								<% end %>
 							</div>
+							<script type="text/javascript">
+								<% if I18n.locale == :ar %>
+									$('#synonyms<%=synonym.id%>').attr('class','pull-right');
+									$('#buttons<%=synonym.id%>').attr('class','pull-left');
+								<% elsif I18n.locale == :en %>
+									$('#synonyms<%=synonym.id%>').attr('class','pull-left');
+									$('#buttons<%=synonym.id%>').attr('class','pull-right');
+								<% end %>
+							</script>
 						</div>
 					</div>
 				</div>
